GRAD-158: Address Copilot review for export PDF
- Add @Transactional to SpecEntityRepository.updateDescription so
  Gemini-executor threads can persist without TransactionRequiredException
- Null-guard candidates/parts arrays in Gemini JSON parse
- Cancel pending Gemini tasks when 20s aggregate timeout trips
- Sanitize classCode through SlugUtil for Content-Disposition filename
- Tighten FK heuristic to require Vietnamese Ma + uppercase suffix
- Tighten question-prefix regex to require explicit points block
- Vietnamese UnauthorizedException messages across new usecases
- Drop unused @PreDestroy import from UsecasesConfiguration